--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<link rel="icon" type="image" href="../public/photos/logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title><JDV-Porfolio></JDV-Porfolio></title>
+		<title>Portafolio Juan David Valencia</title>
 	</head>
 	<body>
 		<div id="root"></div>
