--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image" href="../public/photos/logo.png" />
+		<link rel="icon" type="image" href="/photos/logo.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Portafolio Juan David Valencia</title>
 	</head>
